--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -104,3 +104,7 @@ li a:hover {
 .app-modal-window .modal-content {
   width:1200px !important;
 }
+#needsPadding{
+margin-top: 10px !important;
+margin-bottom: 10px !important;
+}
