--- a/client/views/edit.modal.view.html
+++ b/client/views/edit.modal.view.html
@@ -15,7 +15,8 @@
                 <div class="panel panel-default" id="panel1">
                     <div class="panel-heading">
                         <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse1" ng-click="$ctrl.showMyCourses()">Edit Your Courses and Office Hours</a>
+                            <a data-toggle="collapse" data-target="#collapse1" ng-click="$ctrl.showMyCourses()">Edit
+                                Your Courses and Office Hours</a>
                         </h4>
                     </div>
                     <div id="collapse1" class="panel-collapse collapse">
@@ -56,7 +57,7 @@
             <div class="panel panel-default" id="panel2">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapse2" ng-click="$ctrl.getCurrentResearch()">Add a
+                        <a data-toggle="collapse" data-target="#collapse2" ng-click="$ctrl.getCurrentResearch()">Add a
                             Research
                             Position...</a>
                     </h4>
@@ -94,17 +95,37 @@
             <div class="panel panel-default" id="panel3">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" href="#collapse3" ng-click="$ctrl.getSocial()">Add Your Social Media
+                        <a data-toggle="collapse" data-target="#collapse3" ng-click="$ctrl.getSocial()">Add Your Social
+                            Media
                             Link</a>
                     </h4>
                 </div>
                 <div id="collapse3" class="panel-collapse collapse">
                     <div class="panel-body">
-                        <div>Twitter: {{$ctrl.currenttwitter}} </div>
-                        <input type="text" ng-model="$ctrl.twitter" class="form-control" placeholder="Twitter">
-                        <div>Linkedin: {{$ctrl.currentlinkedin}} </div>
-                        <input type="text" ng-model="$ctrl.linkedin" class="form-control" placeholder="Linkedin">
-                        <button class="btn btn-info form-control" role="button" ng-click="$ctrl.updateSocial()">Update</button>
+                        <div class="row">
+                            <div class="col-sm-4">
+                                <label>Twitter: {{$ctrl.currenttwitter}} </label>
+                            </div>
+                            <div class="col-sm-8">
+                                <input type="text" ng-model="$ctrl.twitter" class="form-control" placeholder="Twitter">
+                            </div>
+                        </div>
+                        <div class="row" id="needsPadding">
+                            <div class="col-sm-4">
+                                <label>Linkedin: {{$ctrl.currentlinkedin}} </label>
+                            </div>
+                            <div class="col-sm-8">
+                                <input type="text" ng-model="$ctrl.linkedin" class="form-control" placeholder="Linkedin">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-5"></div>
+                            <div class="col-sm-1">
+                                <button id="buttonNeedsCss" class="btn btn-info btn-sm" role="button" ng-click="$ctrl.updateSocial()">Update</button>
+                            </div>
+                            <div class="col-sm-6"></div>
+
+                        </div>
                         <br>
                         <div ng-if="$ctrl.smUpdateFail" class="alert alert-warning">Unable to update at this time!</div>
                         <div ng-if="$ctrl.smUpdateSuc" class="alert alert-warning">Success!</div>
