--- a/client/views/search.modal.view.html
+++ b/client/views/search.modal.view.html
@@ -27,7 +27,7 @@
                 <td><a ng-repeat="list in course.sections[0].instructors" ui-sref="details({name: list.name})" ng-click="$dismiss('cancel')">{{list.name}}</br></a></td>
                 <td>{{course.sections[0].deptName}}</td>
                 <td>{{course.description}}</td>
-                <td>{{course.building}}<button ng-click="findLocation($index)">click me</button></td>
+                <td>{{course.building}}<button ng-click="findLocation(course)">click me</button></td>
                 <!-- <td>
                               <h2>Update Listing</h2>
                               Code: <input type="text" ng-model="newListing.code" /><br />
