--- a/client/views/professor.modal.view.html
+++ b/client/views/professor.modal.view.html
@@ -40,7 +40,7 @@
     </div>
     <div id="research">
         <label for="research">Research Opportunities</label>
-        <p>1 Research Assistant in Spatial Computing</p>
+        <p>1 Teaching Assistant in Introduction to Software Engineering</p>
     </div>
     <div id="twitter-widget-holder">
         <label>Twitter</label>
