--- a/client/views/signin.modal.view.html
+++ b/client/views/signin.modal.view.html
@@ -16,7 +16,7 @@
                             <label for="usernameOrEmail" class="col-sm-4 col-form-label text-right">Username</label>
                             <div class="col-sm-8">
                                 <input type="text" id="usernameOrEmail" name="usernameOrEmail" class="form-control"
-                                    ng-model="vm.loginData.username" placeholder="Enter your Email" required autofocus>
+                                    ng-model="vm.loginData.username" placeholder="Enter your username" required autofocus>
                                 <div ng-messages="vm.userForm.usernameOrEmail.$error" role="alert">
                                     <p class="help-block error-text" ng-message="required"><span style="text-align: center">Username
                                             is required.</span></p>
